@@ -345,9 +345,9 @@ setReplaceMethod("[", signature(x = "CsparseMatrix", i = "matrix", j = "missing"
 				value = "replValue"),
 		 function(x, i, value)
 		 ## goto Tsparse modify and convert back:
-		 as(.TM.repl.i.2col(as(x, "TsparseMatrix"), i=i, value=value),
+		 as(.TM.repl.i.mat(as(x, "TsparseMatrix"), i=i, value=value),
 		    "CsparseMatrix"))
-
+## more in ./Matrix.R
 
 setMethod("t", signature(x = "CsparseMatrix"),
 	  function(x) .Call(Csparse_transpose, x, is(x, "triangularMatrix")))
